# MailCore

./: .gitignore  .gitmodules  .hgignore  .hgtags  AUTHORS  CTCoreAccount+Extended.h  CTCoreAccount+Extended.m  CTCoreFolder+Extended.h  CTCoreFolder+Extended.m  CTCoreMessage+Extended.h  CTCoreMessage+Extended.m  Info.plist  LICENSE  MailCore_Prefix.pch  NewCTCoreFolder.m  README.markdown  README.md  build_docs.sh  libetpan_extensions.c  libetpan_extensions.h  libtpan_extensions.c  main.m
libetpan/: ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libetpan-config  libetpan-config.h.in  libtool  rules.mk
libetpan/CVS/: Entries  Repository  Root
libetpan/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
libetpan/build-mac/: Info.plist  README  update.sh
libetpan/build-mac/CVS/: Entries  Repository
libetpan/build-mac/include/: config.h
libetpan/build-mac/include/libetpan/: carray.h  clist.h  imapstorage.h  libetpan-config.h  mailimap.h  mailimap_extension_types.h  mailimap_ssl.h  mailimap_types_helper.h  mailimf.h  mailmime_content.h  mailmime_decode.h  mailmime_types_helper.h  mailpop3.h  mailsmtp_types.h  mailstream.h  mailstream_helper.h  mailstream_types.h  namespace_parser.h  newsfeed_item_enclosure.h  newsfeed_types.h  newsnntp.h  newsnntp_types.h  quota_parser.h  xlist.h
libetpan/build-mac/libetpan.xcodeproj/: mronge.mode1v3  mronge.pbxuser  project.pbxproj
libetpan/build-mac/libetpan.xcodeproj/CVS/: Entries  Repository
libetpan/build-mac/libetpan.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libetpan/build-windows/: Makefile  Makefile.am  Makefile.in  README.txt  build_headers.list  libetpan-config.h  libetpan.sln  libetpan_version.h
libetpan/build-windows/CVS/: Entries  Repository
libetpan/build-windows/libetpan/: libetpan.vcproj
libetpan/build-windows/libetpan/CVS/: Entries  Repository
libetpan/build-windows/readmsg/: readmsg.vcproj
libetpan/build-windows/readmsg/CVS/: Entries  Repository
libetpan/build-windows/smtpsend/: smtpsend.vcproj
libetpan/build-windows/smtpsend/CVS/: Entries  Repository
libetpan/doc/: Makefile  Makefile.am  Makefile.in
libetpan/doc/CVS/: Entries  Repository
libetpan/include/: Makefile  Makefile.am  Makefile.in
libetpan/include/CVS/: Entries  Repository
libetpan/include/libetpan/: libetpan-config.h
libetpan/m4/: README
libetpan/m4/CVS/: Entries  Repository
libetpan/src/: Makefile  Makefile.am  Makefile.in  dummy.cpp  versioninfo.rc  versioninfo.rc.in
libetpan/src/CVS/: Entries  Repository
libetpan/src/bsd/: Makefile  Makefile.am  Makefile.in
libetpan/src/bsd/CVS/: Entries  Repository
libetpan/src/data-types/: Makefile  Makefile.am  Makefile.in  charconv.c  connect.c  connect.h  maillock.c  mailsasl.c  mailstream.c  mailstream.h  mailstream_cancel.c  mailstream_cancel.h  mailstream_cancel_types.h  mailstream_helper.c  mailstream_low.c  mailstream_low.h  mailstream_socket.c  mailstream_socket.h  mailstream_ssl.c  mailstream_ssl.h  mailstream_ssl_private.h  mmapstring.c  mmapstring_private.h  timeutils.h
libetpan/src/data-types/CVS/: Entries  Repository
libetpan/src/driver/: Makefile  Makefile.am  Makefile.in
libetpan/src/driver/CVS/: Entries  Repository
libetpan/src/driver/implementation/: Makefile  Makefile.am  Makefile.in
libetpan/src/driver/interface/: Makefile  Makefile.am  Makefile.in  maildriver_tools.c  mailstorage.c  mailstorage_tools.c
libetpan/src/driver/tools/: Makefile  Makefile.am  Makefile.in  generic_cache.c  imfcache.c  mailthread.c
libetpan/src/engine/: Makefile  Makefile.am  Makefile.in  mailprivacy.c  mailprivacy_gnupg.c  mailprivacy_smime.c  mailprivacy_tools.c  mailprivacy_tools.h  mailprivacy_tools_private.h
libetpan/src/engine/CVS/: Entries  Repository
libetpan/src/low-level/: Makefile  Makefile.am  Makefile.in
libetpan/src/low-level/CVS/: Entries  Repository
libetpan/src/low-level/feed/: Makefile  Makefile.am  Makefile.in  date.c  date.h  newsfeed.c  newsfeed_item_enclosure.c  newsfeed_private.c  newsfeed_private.h  parser.c  parser.h
libetpan/src/low-level/imap/: .#mailimap.c.1.48  Makefile  Makefile.am  Makefile.in  acl_parser.c  acl_parser.h  annotatemore_parser.c  annotatemore_parser.h  annotatemore_types.c  idle.c  idle.h  mailimap.c  mailimap_extension.c  mailimap_extension.h  mailimap_extension_types.h  mailimap_keywords.c  mailimap_keywords.h  mailimap_parser.c  mailimap_parser.h  mailimap_sender.c  mailimap_sender.h  mailimap_socket.c  mailimap_socket.h  mailimap_ssl.c  mailimap_types.c  mailimap_types.h  mailimap_types_helper.c  namespace.c  namespace_parser.c  namespace_types.c  namespace_types.h  quota.c  quota.h  quota_parser.c  quota_sender.h  quota_types.c  quota_types.h  uidplus.c  uidplus_parser.c  uidplus_parser.h  (+3 more)
libetpan/src/low-level/imf/: Makefile  Makefile.am  Makefile.in  mailimf.c  mailimf_types_helper.c
libetpan/src/low-level/maildir/: Makefile  Makefile.am  Makefile.in  maildir.c
libetpan/src/low-level/mbox/: Makefile  Makefile.am  Makefile.in  mailmbox.c  mailmbox_parse.c
libetpan/src/low-level/mh/: Makefile  Makefile.am  Makefile.in  mailmh.c
libetpan/src/low-level/mime/: Makefile  Makefile.am  Makefile.in  mailmime.c  mailmime.h  mailmime_content.c  mailmime_decode.c  mailmime_disposition.c  mailmime_types_helper.c  mailmime_write_generic.c
libetpan/src/low-level/nntp/: Makefile  Makefile.am  Makefile.in  newsnntp.c  newsnntp_socket.c  newsnntp_ssl.c
libetpan/src/low-level/pop3/: Makefile  Makefile.am  Makefile.in  (+5 more)
libetpan/src/main/: Makefile  Makefile.am  Makefile.in  libetpan_version.h.in
libetpan/src/windows/: Makefile  Makefile.am  Makefile.in  inet_aton.c  time_r.c  win_etpan.h  win_init.cpp
libetpan/tests/: Makefile  Makefile.am  Makefile.in  compose-msg.c  decrypt.c  fetch-attachment.c  option-parser.c  option-parser.h  pgp.c  readmsg-common.c  readmsg-common.h  readmsg-simple.c  readmsg-uid.c  readmsg.c  smime.c  smtpsend.c
libetpan/tests/CVS/: Entries  Repository
(+338 files in other folders)
